--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vant3-generator",
-  "version": "1.0.3",
-  "description": "基于vant封装的表单生成器",
+  "name": "vant4-generator",
+  "version": "1.0.1",
+  "description": "基于vant4封装的表单生成器",
   "type": "module",
   "main": "dist/index.js",
   "types": "lib/index.d.ts",
@@ -17,15 +17,15 @@
   "author": "NieR",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "vant": "3.6.11",
-    "vue": "^3.2.47",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "path": "^0.12.7",
     "sass": "^1.58.2",
+    "typescript": "^4.9.5",
+    "vant": "^4.1.2",
     "vite": "^4.1.2",
     "vite-plugin-dts": "^2.0.0-beta.1",
-    "vite-plugin-style-inject": "^0.0.1"
+    "vite-plugin-style-inject": "^0.0.1",
+    "vue": "^3.2.47"
   }
 }
